<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding_avg"
    android:paddingRight="@dimen/padding_avg">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_avg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_plot"
        android:textSize="@dimen/text_size_big"
        android:textStyle="bold" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_avg" />

    <View style="@style/Divider" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_min" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/rating"
            android:textSize="@dimen/text_size_small" />

        <TextView
            android:id="@+id/text_view_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/release_date"
            android:textSize="@dimen/text_size_small" />

    </RelativeLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_avg" />

    <TextView
        android:id="@+id/text_view_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textSize="@dimen/text_size_avg" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_avg" />
</LinearLayout>